Refactor alias name generation